fix: gap in gallery

--- a/songbird/src/assets/sass/layout/_gallery_page.scss
+++ b/songbird/src/assets/sass/layout/_gallery_page.scss
@@ -42,6 +42,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-end;
+      gap: 1rem;
       padding: 1rem;
 
       .birds_photo_img {
